tests/baselines/reference/unicodeExtendedEscapesInStrings04_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings04_ES6.ts(2,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings04_ES6.ts (1 errors) ====
    
    var x = "\u{00000000}";
               
!!! error TS1125: Hexadecimal digit expected.
    